docs(v0.4): WS-J local -PgametestJvmArgs run evidence (detection from the running JVM)
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU